--- a/index.html
+++ b/index.html
@@ -12,14 +12,18 @@
 				<li>A smile thats turned into frown</li>
 				<li>Tears rolling down her cheeks</li>
 				<li>Shes been depressed for a couple of weeks</li>
-				<div>
-					<ol>
+				</div>
+					</ol>
+		<div>
+			<ol>
 						<li>She likes to cut her wrist</li>
 						<li>She wished she didnt exist</li>
 						<li>Afraid to look at herself in the mirror</li>
 						<li>Criticism, such a predictable horror.</li>
-						<div>
-							<ol>
+						</div>
+							</ol>
+		<div>
+			<ol>
 								<li>She eats her lunch in a toilet seat</li>
 								<li>And cries her pain between her feet</li>
 								<li>Shes not a weirdo, not a freak</li>
