--- a/index.html
+++ b/index.html
@@ -6,24 +6,23 @@
 	</head>
 	<body>
 		<h1 font face="verdana"> Girl Gone So Weak </h1>
-		<div>
-			<ol>
+		<h2 style="font-family:Blackadder ITC;"> Aesthetic </h2>
+				 <h4 style="font-family:Century;"> -an originally created poem </h4>
+		<div>First stanza<ol>
 				<li>A curve thats upside down</li>
 				<li>A smile thats turned into frown</li>
 				<li>Tears rolling down her cheeks</li>
 				<li>Shes been depressed for a couple of weeks</li>
 				</div>
 					</ol>
-		<div>
-			<ol>
+		<div>Second stanza<ol>
 						<li>She likes to cut her wrist</li>
 						<li>She wished she didnt exist</li>
 						<li>Afraid to look at herself in the mirror</li>
 						<li>Criticism, such a predictable horror.</li>
 						</div>
 							</ol>
-		<div>
-			<ol>
+		<div>Third stanza<ol>
 								<li>She eats her lunch in a toilet seat</li>
 								<li>And cries her pain between her feet</li>
 								<li>Shes not a weirdo, not a freak</li>
