--- a/index.html
+++ b/index.html
@@ -8,25 +8,27 @@
 		<h1 font face="verdana"> Girl Gone So Weak </h1>
 		<h2 style="font-family:Blackadder ITC;"> Aesthetic </h2>
 				 <h4 style="font-family:Century;"> -an originally created poem </h4>
-		<div>First stanza<ol>
-				<li>A curve thats upside down</li>
-				<li>A smile thats turned into frown</li>
-				<li>Tears rolling down her cheeks</li>
-				<li>Shes been depressed for a couple of weeks</li>
+		
+		<div> First stanza <ol>
+			
+				<li>A curve thats upside down
+				<br>A smile thats turned into frown
+				<br>Tears rolling down her cheeks
+				<br>Shes been depressed for a couple of weeks
 				</div>
 					</ol>
-		<div>Second stanza<ol>
-						<li>She likes to cut her wrist</li>
-						<li>She wished she didnt exist</li>
-						<li>Afraid to look at herself in the mirror</li>
-						<li>Criticism, such a predictable horror.</li>
+		<div> Second stanza <ol>
+						<li>She likes to cut her wrist
+						<br>She wished she didnt exist
+						<br>Afraid to look at herself in the mirror
+						<br>Criticism, such a predictable horror.
 						</div>
 							</ol>
-		<div>Third stanza<ol>
-								<li>She eats her lunch in a toilet seat</li>
-								<li>And cries her pain between her feet</li>
-								<li>Shes not a weirdo, not a freak</li>
-								<li>Shes just a girl, gone so weak</li>
+		<div> Third stanza <ol>
+								<li>She eats her lunch in a toilet seat
+								<br>And cries her pain between her feet
+								<br>Shes not a weirdo, not a freak
+								<br>Shes just a girl, gone so weak
 							</ol>
 							</li>
 							<div>
