--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
 		
 		<div> First stanza <ol>
 			
-			<li>A curve thats upside down</li>
+			<li>A curve thats upside down
 				<br>A smile thats turned into frown
 				<br>Tears rolling down her cheeks
 				<br>Shes been depressed for a couple of weeks
 				</div>
 					</ol>
 		<div> Second stanza <ol>
-			<li>She likes to cut her wrist</li>
+			<li>She likes to cut her wrist
 						<br>She wished she didnt exist
 						<br>Afraid to look at herself in the mirror
 						<br>Criticism, such a predictable horror.
 						</div>
 							</ol>
 		<div> Third stanza <ol>
-			<li>She eats her lunch in a toilet seat</li>
+			<li>She eats her lunch in a toilet seat
 								<br>And cries her pain between her feet
 								<br>Shes not a weirdo, not a freak
 								<br>Shes just a girl, gone so weak
