--- a/index.html
+++ b/index.html
@@ -6,34 +6,33 @@
 	</head>
 	<body>
 		<h1 font face="verdana"> Girl Gone So Weak </h1>
-		<h2 style="font-family:Blackadder ITC;"> Aesthetic </h2>
-				 <h4 style="font-family:Century;"> -an originally created poem </h4>
+				 <h6 style="font-family:Century;"> -an originally created poem </h6>
 		
 		<div> First stanza <ol>
 			
-			<li>A curve thats upside down
+			<li>A curve thats upside down</li>
 				<br>A smile thats turned into frown
 				<br>Tears rolling down her cheeks
 				<br>Shes been depressed for a couple of weeks
 				</div>
 					</ol>
 		<div> Second stanza <ol>
-			<li>She likes to cut her wrist
+			<li>She likes to cut her wrist</li>
 						<br>She wished she didnt exist
 						<br>Afraid to look at herself in the mirror
 						<br>Criticism, such a predictable horror.
 						</div>
 							</ol>
 		<div> Third stanza <ol>
-			<li>She eats her lunch in a toilet seat
+			<li>She eats her lunch in a toilet seat</li>
 								<br>And cries her pain between her feet
 								<br>Shes not a weirdo, not a freak
 								<br>Shes just a girl, gone so weak
 							</ol>
 							</li>
 							<div>
-								<h2><p>&quot;You have been criticizing yourself for years, and it hasnt worked. Try approving of yourself and see what happens. &nbsp; &quot;
-									</p>
-									<p>Louise Hay &copy; Copyright</p>
+								<h4><p>&quot;You have been criticizing yourself for years, and it hasnt worked. Try approving of yourself and see what happens. &nbsp; &quot;
+									</p></h4>
+									<h3><p>Louise Hay &copy; Copyright</p></h3>
 									</body
 </html>
