--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 		<title>Excersice 2</title>
 	</head>
 	<body>
-		<h1 font face="verdana"> Girl Gone So Weak </h1>
-				 <h6 style="font-family:Century;"> -an originally created poem </h6>
+		<h1 font face="verdana"> Poems </h1>
+				 <h6 style="font-family:Century;"> -an originally created poems </h6>
 		
-		<div> First stanza <ol>
+		<div> Girl Gone So Weak <ol>
 			
 			<li>A curve thats upside down</li>
 				<br>A smile thats turned into frown
@@ -16,11 +16,34 @@
 				<br>Shes been depressed for a couple of weeks
 				</div>
 					</ol>
-		<div> Second stanza <ol>
-			<li>She likes to cut her wrist</li>
+		<div>
+			<ol>
+		<li>She likes to cut her wrist</li>
 						<br>She wished she didnt exist
 						<br>Afraid to look at herself in the mirror
 						<br>Criticism, such a predictable horror.
+		</div>
+	</ol>
+<div>
+	<ol>
+		<li>She eats her lunch in a toilet seat</li>
+								<br>And cries her pain between her feet
+								<br>Shes not a weirdo, not a freak
+								<br>Shes just a girl, gone so weak
+							</ol>
+							</li>
+		</div>
+	<div>
+		<ol>
+			<li>She eats her lunch in a toilet seat</li>
+								<br>And cries her pain between her feet
+								<br>Shes not a weirdo, not a freak
+								<br>Shes just a girl, gone so weak
+			</div>
+		</ol>
+	</li>
+		<div> Second stanza <ol>
+			
 						</div>
 							</ol>
 		<div> Third stanza <ol>
