--- a/index.html
+++ b/index.html
@@ -8,51 +8,64 @@
 		<h1 font face="verdana"> Poems </h1>
 				 <h6 style="font-family:Century;"> -an originally created poems </h6>
 		
-		<div> Girl Gone So Weak <ol>
+		<h2><div> Girl Gone So Weak <ol></h2>
 			
 			<li>A curve thats upside down</li>
 				<br>A smile thats turned into frown
 				<br>Tears rolling down her cheeks
 				<br>Shes been depressed for a couple of weeks
 				</div>
-					</ol>
 		<div>
 		<li>She likes to cut her wrist</li>
-						<br>She wished she didnt exist
-						<br>Afraid to look at herself in the mirror
-						<br>Criticism, such a predictable horror.
+			<br>She wished she didnt exist
+			<br>Afraid to look at herself in the mirror
+			<br>Criticism, such a predictable horror.
 		</div>
 <div>
 		<li>She eats her lunch in a toilet seat</li>
-								<br>And cries her pain between her feet
-								<br>Shes not a weirdo, not a freak
-								<br>Shes just a girl, gone so weak
-							</ol>
-							</li>
+			<br>And cries her pain between her feet
+			<br>Shes not a weirdo, not a freak
+			<br>Shes just a girl, gone so weak
 		</div>
 	<div>
-		<ol>
 			<li>She eats her lunch in a toilet seat</li>
-								<br>And cries her pain between her feet
-								<br>Shes not a weirdo, not a freak
-								<br>Shes just a girl, gone so weak
+				<br>And cries her pain between her feet
+				<br>Shes not a weirdo, not a freak
+				<br>Shes just a girl, gone so weak
 			</div>
 		</ol>
 	</li>
-		<div> Second stanza <ol>
-			
-						</div>
-							</ol>
-		<div> Third stanza <ol>
-			<li>She eats her lunch in a toilet seat</li>
-								<br>And cries her pain between her feet
-								<br>Shes not a weirdo, not a freak
-								<br>Shes just a girl, gone so weak
-							</ol>
-							</li>
-							<div>
-								<h4><p>&quot;You have been criticizing yourself for years, and it hasnt worked. Try approving of yourself and see what happens. &nbsp; &quot;
-									</p></h4>
-									<h3><p>Louise Hay &copy; Copyright</p></h3>
+		<div> Poems <ol>
+			<li>Poems,</li>
+				<br>I shall write for her
+				<br>A poem so beautiful,
+				<br>It reflects her soul
+				<br>A poem so innocent
+				<br>Like her 2 year old self
+				<br>A poem so addictive
+				<br>Like the way she bites her lip
+			<li>A poem so deep,</li>
+				<br>Just liker her mind
+				<br>A poem so mysterious,
+				<br>It describes her personality
+				<br>A poem so happy,
+				<br>Like the way she makes me feel
+				<br>A poem so carefree
+				<br>Like the way she moves
+				<br>A poem so bright
+				<br>Like the stars she love
+			<li>A poem so elegant, </li>
+				<br>Like her collection of dresses
+				<br>A poem so toxic
+				<br>Like her doubts
+				<br>A poem so meaningful
+				<br>Just like her life
+			<li>All these poems</li>
+				<br>For one girl
+				<br>Or I shall rather say:
+				<br>One girl,
+				<br>For all these poems
+			</ol>
+	</div>
 									</body
 </html>
