--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 			</ol>
 		</li>
 		
-		<div> Poems <ol>
+	<h2><div> Poems <ol></h2>
+		
 			<li>Poems,</li>
 				<br>I shall write for her
 				<br>A poem so beautiful,
