--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 				 <h6 style="font-family:Century;"> -an originally created poems </h6>
 		
 		<h2><div> Girl Gone So Weak <ol></h2>
-			
+			<div>
+			<ol>	
 			<li>A curve thats upside down</li>
 				<br>A smile thats turned into frown
 				<br>Tears rolling down her cheeks
@@ -27,6 +28,8 @@
 		</li>
 		
 	<h2><div> Poems <ol></h2>
+		<div>
+			<ol>
 		
 			<li>Poems,</li>
 				<br>I shall write for her
