--- a/index.html
+++ b/index.html
@@ -15,10 +15,12 @@
 				<br>A smile thats turned into frown
 				<br>Tears rolling down her cheeks
 				<br>Shes been depressed for a couple of weeks
+				<div>
 			<li>She likes to cut her wrist</li>
 				<br>She wished she didnt exist
 				<br>Afraid to look at herself in the mirror
 				<br>Criticism, such a predictable horror.
+				<div>
 			<li>She eats her lunch in a toilet seat</li>
 				<br>And cries her pain between her feet
 				<br>Shes not a weirdo, not a freak
@@ -39,6 +41,7 @@
 				<br>Like her 2 year old self
 				<br>A poem so addictive
 				<br>Like the way she bites her lip
+				<div>
 			<li>A poem so deep,</li>
 				<br>Just liker her mind
 				<br>A poem so mysterious,
@@ -49,12 +52,14 @@
 				<br>Like the way she moves
 				<br>A poem so bright
 				<br>Like the stars she love
+				<div>
 			<li>A poem so elegant, </li>
 				<br>Like her collection of dresses
 				<br>A poem so toxic
 				<br>Like her doubts
 				<br>A poem so meaningful
 				<br>Just like her life
+					<div>
 			<li>All these poems</li>
 				<br>For one girl
 				<br>Or I shall rather say:
