--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
 			<div>
 			<ol>	
 			<li>A curve thats upside down</li>
-				<br>A smile thats turned into frown
-				<br>Tears rolling down her cheeks
-				<br>Shes been depressed for a couple of weeks
+				<br> &emsp; &emsp; A smile thats turned into frown
+				<br> &emsp; &emsp; Tears rolling down her cheeks
+				<br> &emsp; &emsp; Shes been depressed for a couple of weeks
 				<div></div>
 			<li>She likes to cut her wrist</li>
-				<br>She wished she didnt exist
-				<br>Afraid to look at herself in the mirror
-				<br>Criticism, such a predictable horror.
+				<br> &emsp; &emsp; She wished she didnt exist
+				<br> &emsp; &emsp; Afraid to look at herself in the mirror
+				<br> &emsp; &emsp; Criticism, such a predictable horror.
 				<div></div>
 			<li>She eats her lunch in a toilet seat</li>
-				<br>And cries her pain between her feet
-				<br>Shes not a weirdo, not a freak
-				<br>Shes just a girl, gone so weak
+				<br> &emsp; &emsp; And cries her pain between her feet
+				<br> &emsp; &emsp; Shes not a weirdo, not a freak
+				<br> &emsp; &emsp; Shes just a girl, gone so weak
 		</div>
 			</ol>
 		</li>
@@ -34,37 +34,37 @@
 			<ol>
 		
 			<li>Poems,</li>
-				<br>I shall write for her
-				<br>A poem so beautiful,
-				<br>It reflects her soul
-				<br>A poem so innocent
-				<br>Like her 2 year old self
-				<br>A poem so addictive
-				<br>Like the way she bites her lip
+				<br> &emsp; &emsp; I shall write for her
+				<br> &emsp; &emsp;A poem so beautiful,
+				<br> &emsp; &emsp;It reflects her soul
+				<br> &emsp; &emsp; A poem so innocent
+				<br> &emsp; &emsp; Like her 2 year old self
+				<br> &emsp; &emsp; A poem so addictive
+				<br> &emsp; &emsp; Like the way she bites her lip
 				<div></div>
 			<li>A poem so deep,</li>
-				<br>Just liker her mind
-				<br>A poem so mysterious,
-				<br>It describes her personality
-				<br>A poem so happy,
-				<br>Like the way she makes me feel
-				<br>A poem so carefree
-				<br>Like the way she moves
-				<br>A poem so bright
-				<br>Like the stars she love
+				<br> &emsp; &emsp; Just liker her mind
+				<br> &emsp; &emsp; A poem so mysterious,
+				<br> &emsp; &emsp; It describes her personality
+				<br> &emsp; &emsp; A poem so happy,
+				<br> &emsp; &emsp; Like the way she makes me feel
+				<br> &emsp; &emsp; A poem so carefree
+				<br> &emsp; &emsp; Like the way she moves
+				<br> &emsp; &emsp; A poem so bright
+				<br> &emsp; &emsp; Like the stars she love
 				<div></div>
 			<li>A poem so elegant, </li>
-				<br>Like her collection of dresses
-				<br>A poem so toxic
-				<br>Like her doubts
-				<br>A poem so meaningful
-				<br>Just like her life
+				<br> &emsp; &emsp; Like her collection of dresses
+				<br> &emsp; &emsp; A poem so toxic
+				<br> &emsp; &emsp; Like her doubts
+				<br> &emsp; &emsp; A poem so meaningful
+				<br> &emsp; &emsp; Just like her life
 				<div></div>
 			<li>All these poems</li>
-				<br>For one girl
-				<br>Or I shall rather say:
-				<br>One girl,
-				<br>For all these poems
+				<br> &emsp; &emsp; For one girl
+				<br> &emsp; &emsp; Or I shall rather say:
+				<br> &emsp; &emsp; One girl,
+				<br> &emsp; &emsp; For all these poems
 			</li>
 			</ol>
 	</div>
